--- a/content/LangChain_Document_Loaders.html
+++ b/content/LangChain_Document_Loaders.html
@@ -199,5 +199,19 @@ docs = loader.load()
       LangChain’s document loaders let you pull in context from virtually any source with just a few lines of Python. They’re your first step in building knowledge-aware applications — from chatbots that reference PDFs, to search engines over Notion pages. If data is power, document loaders are your socket to plug into it. 🔌
     </p>
   </div>
+
+<!-- Footer -->
+<footer class="bg-light py-4 mt-5 border-top">
+  <div class="container text-center">
+    <p class="text-muted mb-1">
+      <i class="bi bi-person-circle me-2"></i>
+      <strong>Written by:</strong> <a href="https://www.linkedin.com/in/pulkit-dhingra-4b7312193/" target="_blank" rel="noopener noreferrer" class="text-decoration-none">Pulkit Dhingra</a>
+    </p>
+    <p class="text-muted small mb-0">
+      © 2025 Byte-Sized-Brilliance-AI. All rights reserved.
+    </p>
+  </div>
+</footer>
+
 </body>
 </html>
