--- a/content/Langchains_with_Ollama.html
+++ b/content/Langchains_with_Ollama.html
@@ -212,5 +212,19 @@ print(response.content)</code></pre>
     <h4> Final Thoughts</h4>
     <p>LangChain isn’t just another Python wrapper — it's a modular, scalable toolkit for building full-fledged LLM-powered applications. With Ollama support, you can even run models locally. Whether you’re exploring prompt templates or building conversational agents, LangChain makes the process simple and production-ready.</p>
   </div>
+
+<!-- Footer -->
+<footer class="bg-light py-4 mt-5 border-top">
+  <div class="container text-center">
+    <p class="text-muted mb-1">
+      <i class="bi bi-person-circle me-2"></i>
+      <strong>Written by:</strong> <a href="https://www.linkedin.com/in/pulkit-dhingra-4b7312193/" target="_blank" rel="noopener noreferrer" class="text-decoration-none">Pulkit Dhingra</a>
+    </p>
+    <p class="text-muted small mb-0">
+      © 2025 Byte-Sized-Brilliance-AI. All rights reserved.
+    </p>
+  </div>
+</footer>
+
 </body>
 </html>
