--- a/content/Setting_up_Ollama.html
+++ b/content/Setting_up_Ollama.html
@@ -160,5 +160,19 @@
     <h4 class="mt-4"> Reference</h4>
     <p><a href="https://ollama.com/" target="_blank">ollama.com</a></p>
   </div>
+
+<!-- Footer -->
+<footer class="bg-light py-4 mt-5 border-top">
+  <div class="container text-center">
+    <p class="text-muted mb-1">
+      <i class="bi bi-person-circle me-2"></i>
+      <strong>Written by:</strong> <a href="https://www.linkedin.com/in/pulkit-dhingra-4b7312193/" target="_blank" rel="noopener noreferrer" class="text-decoration-none">Pulkit Dhingra</a>
+    </p>
+    <p class="text-muted small mb-0">
+      © 2025 Byte-Sized-Brilliance-AI. All rights reserved.
+    </p>
+  </div>
+</footer>
+
 </body>
 </html>
