--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <a class="nav-link text-white" href="#" id="about-link">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#" id="home-link">Blog List</a>
+            <a class="nav-link text-white" href="https://pulkit12dhingra.github.io/Blog/" id="home-link">Blog List</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-white" href="content/contribute.html" id="contribute-link">Contribute</a>
