adding contribute.html

--- a/index.html
+++ b/index.html
@@ -335,10 +335,10 @@
     });
 
     // Home (reload blog list)
-    document.getElementById("home-link").addEventListener("click", function (e) {
-      e.preventDefault();
-      renderBlogList(cachedBlogData);
-    });
+    //document.getElementById("home-link").addEventListener("click", function (e) {
+     // e.preventDefault();
+     // renderBlogList(cachedBlogData);
+    //});
 
     // Search
     const searchForm = document.querySelector("form[role='search']");
