--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
           <li class="nav-item">
             <a class="nav-link text-white" href="https://pulkit12dhingra.github.io/portfolio/" target="_blank">Portfolio</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="https://www.linkedin.com/company/byte-sized-brilliance-ai/?viewAsMember=true" target="_blank">Linkedin</a>
+          </li>
         </ul>
   
         <form class="d-flex mt-2 mt-lg-0" role="search">
